<resources>
    <string name="app_name">House Rental Management</string>
    <string name="title_app">House Rental Management</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="provide_your_email_and_password_to_signup">Provide your Email ,Password and Phone number to Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login">Login</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="provide_your_email_to_reset_your_password">Provide your Email to reset your password</string>
    <string name="your_email">Your Email</string>
    <string name="reset">Reset</string>
    <string name="by_clicking_reset_you_will_be_receiving_an_email_to_reset_your_password">By clicking RESET,\nyou will be receiving an email to reset your password</string>
    <string name="see_houses">See Houses</string>
    <string name="see_member">See Member</string>
    <string name="rent_per_rooms_2000">Rent Per Rooms : 2000</string>
    <string name="no_of_rooms_2">No. of Rooms : 2</string>
    <string name="add_house">Add House</string>
    <string name="facilities_available_in_house_like_ac_washing_machine_kitchen_etc">Facilities Available in house like AC, washing machine, kitchen etc</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="update_member">Update Member</string>
    <string name="delete_member">Delete Member</string>
    <string name="house_details">House Details</string>
    <string name="enter_rent_per_room">Enter Rent Per Room</string>
    <string name="add_member">Add Member</string>
    <string name="delete_house">Delete Rental House</string>
    <string name="update_house">Update Rental House</string>
    <string name="see_your_rental_property">See your Rental Property</string>
    <string name="add_a_rental_house">Add a Rental House</string>
    <string name="view_member">View Member</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_joining_date">Enter Joining Date</string>
    <string name="enter_member_rent">Enter Member Rent</string>
    <string name="enter_member_age">Enter Member age</string>
    <string name="enter_member_job">Enter Member Job</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_total_no_of_room">Enter Total no. of Room</string>
    <string name="enter_exact_house_location">Enter Exact House Location</string>
    <string name="person">Person</string>
    <string name="home">Home</string>
    <string name="search">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_houses">Add Houses</string>
    <string name="user_name">User Name: %1$s</string>
    <string name="user_email">User Email: %1$s</string>
    <string name="view_payment">View Payment</string>
    <string name="house_rental">House rental</string>
    <string name="status">Status</string>
    <string name="month">Month</string>
    <string name="enter_userid">Enter UserID</string>
    <string name="room_number">Room number</string>
    <string name="user_id">User ID: %1$s</string>
    <string name="search_by_location">Search by Location</string>
    <string name="create_bill">Create Bill</string>
    <string name="change_user_information">Change User Information</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Log out</string>
    <string name="view_contract">View Contract</string>
    <string name="view_rental_house">View Rental House</string>
    <string name="view_bill">View Bill</string>
    <string name="request_maintenance">Request Maintenance</string>
    <string name="bill_sum">Bill Sum</string>
    <string name="electric_bill">Electric Bill</string>
    <string name="rent_bill">Rent Bill</string>
    <string name="name">Name</string>
    <string name="water_bill">Water Bill</string>
    <string name="year">Year</string>
    <string name="payment">PAYMENT</string>
    <string name="make_payment">Make Payment</string>
    <string name="phone_number">Phone Number</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="provide_your_email_and_password_to_login">Provide your Email and Password to Login</string>
    <string name="house_name_to_display">House Name</string>
    <string name="house_name_to_search">House name to search</string>
    <string name="house_location">House Location</string>
    <string name="number_of_room">Number of Room</string>
    <string name="rent_per_room">Rent Per Room</string>
    <string name="enter_userid_from_renter_account">Enter userId from renter account</string>
    <string name="member_name">Member Name</string>
    <string name="enter_room_number">Enter Room Number</string>
    <string name="member_age">Member Age</string>
    <string name="userid">User Id</string>
    <string name="memberName">Member Name: %1$s</string>
    <string name="joiningDate">Joining Date: %1$s</string>
    <string name="phoneNumber">Phone Number: %1$s</string>
    <string name="Age">Age: %1$s</string>
    <string name="roomNumber">Room Number: %1$s</string>
    <string name="memberRent">Member Rent: %1$s</string>
    <string name="houseLocation">House Location: %1$s</string>
    <string name="rentPerRomm">Rent per room: %1$s\n</string>
    <string name="numberOfRoom">"Number of rooms: %1$s "</string>
    <string name="billSum">Bill Sum: %1$s</string>
    <string name="Status">Status: %1$s</string>
    <string name="monthYear">Payment Date: %1$s</string>
    <string name="ownerName">Owner Name: %1$s</string>
    <string name="houseName">House Name: %1$s</string>
    <string name="rentAmount">Rent amount: %1$s</string>
    <string name="there_s_nothing_in_here">There\'s nothing in here</string>
    <string name="enter_your_email_example_qwerty_gmail_com">Enter your email, example: qwerty@gmail.com</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_the_amount_of_payment">Enter the amount of payment</string>
    <string name="rent_amount">Rent Amount</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="price_from_0_to">Price from 0 to %1$s</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_your_username">Enter_your_username</string>
    <string name="update_information">Update Information</string>
    <string name="enter_your_phoneNumber">Enter your phone number</string>
    <string name="payment_date">Payment Date: %1$s/%2$s</string>
    <string name="viewContract">View Contract</string>
    <string name="view_chart">View Chart</string>
    <string name="rent_statistic">Rent Statistic</string>
    <string name="leave_house">Leave House</string>
    <string name="view_statistics">View Statistics</string>
    <string name="manage_houses">Manage Houses</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="add_renter_account">Add Renter Account</string>
    <string name="view_house_owner_account">View House Owner Account</string>
    <string name="manage_house_owner_account">Manage House Owner Account</string>
</resources>