<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".houseOwner.RegisterOwner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title_app"
            android:textColor="@color/textColor"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/provide_your_email_and_password_to_signup"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="@string/phone_number" />
        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phoneNumber"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/username" />
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="Enter_your_username"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/email" />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/password" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_repassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/confirm_password" />
        <EditText
            android:id="@+id/et_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_your_password_again"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_rounded_input_field"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/textGreen"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>