<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/owner_dashboard">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_person_foreground" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/user_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5sp"
                android:text="@string/user_name"
                android:textColor="#03A9F4"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5sp"
                android:text="@string/user_email"
                android:textColor="#03A9F4"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/userID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="@string/user_id"
                    android:textColor="#03A9F4"
                    android:textSize="15sp" />

            </RelativeLayout>

            <!-- replace with your copy icon -->

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/update_Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/update_information" />

        <Button
            android:id="@+id/btn_manageAccounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/manage_accounts" />

        <Button
            android:id="@+id/btn_manageHouses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/manage_houses" />

        <Button
            android:id="@+id/btn_viewStatistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/view_statistics" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:text="@string/logout" />
    </LinearLayout>
</LinearLayout>
