<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="user.UserProfile">

    <RelativeLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/owner_dashboard">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_person_foreground" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/user_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5sp"
                android:text="@string/user_name"
                android:textColor="#03A9F4"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5sp"
                android:text="@string/user_email"
                android:textColor="#03A9F4"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/userID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="@string/user_id"
                    android:textColor="#03A9F4"
                    android:textSize="15sp" />

            </RelativeLayout>

            <!-- replace with your copy icon -->

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_info"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/change_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border_top_round"
            android:text="@string/change_user_information" />

        <Button
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:text="@string/change_password" />

        <Button
            android:id="@+id/view_contract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:text="@string/view_contract" />

        <Button
            android:id="@+id/view_rental"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:text="@string/view_rental_house" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border_bottom_round"
            android:text="@string/logout" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/bottom_nav_view" />
</RelativeLayout>
