<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".houseOwner.DashboardOwner">
    <RelativeLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingBottom="20dp"
        android:background="@drawable/owner_dashboard"
        >

        <ImageView
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:id="@+id/user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_foreground" />

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/user_image"
            android:orientation="vertical">

            <TextView
                android:padding="5dp"
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#03A9F4"
                android:text="@string/user_name"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:padding="5dp"
                android:textColor="#03A9F4"
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:text="@string/user_email" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_info"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_seeHouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_input_field"
            android:text="@string/see_your_rental_property"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_addHouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_rounded_input_field"
            android:text="@string/add_a_rental_house"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <Button
            android:id="@+id/change_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_rounded_input_field"
            android:text="@string/update_information"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <Button
            android:id="@+id/view_contract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_rounded_input_field"
            android:text="@string/viewContract"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_viewChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_rounded_input_field"
            android:text="@string/view_chart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_rounded_input_field"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>
